welcome.lessons.welcome.array.basics.Array2.scala.code
override def run() {
		var T = new Array [Color](getMondeHauteur())

 def motif {
 	for (i <- 0 to T.length-2) {
  T(i)=getCouleurSol(); avance();
	} 
	T(T.length-1)=getCouleurSol();
 
	return T;
 }

 motif 
 recule(T.length);

 for (a<-2 to getMondeLargeur()) {
 gauche(); avance(); droite();
 val decalage = litMessage().toInt
 for (i <- 0 to T.length-2) {
	setCouleurBrosse(T((i+decalage)%T.length)); baisseBrosse();leveBrosse(); avance();
}
setCouleurBrosse(T((i+decalage)%T.length)); baisseBrosse();leveBrosse();
recule(T.length)
}
}
